--- a/README.Rmd
+++ b/README.Rmd
@@ -68,3 +68,9 @@ readLines(markdown_file)
 unleash(markdown_file)
 readLines(markdown_file)
 ```
+
+## Caveats
+
+aeolus uses the tinkr package under the hood, which means it suffers from the same limitations: for instance, files after editing only use "-", not "*", for lists.
+Refer to [tinkr documentation](https://docs.ropensci.org/tinkr/#loss-of-markdown-style).
+We recommend using aeolus together with version control and reviewing changes carefully before committing them.
