docs: fix installation link
Thx @hfrick

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ aEOLus, get it? :wink:
 You can install the development version of aeolus like so:
 
 ``` r
-pak::pak("maelle/aeolus")
+pak::pak("ropenscilabs/aeolus")
 ```
 
 ## Why have semantic linebreaks?
